tests/negative/gold/toitdoc3_test.gold
tests/negative/toitdoc3_test.toit:5:1: error: Unterminated multi-line comment
/**
^
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/toitdoc3_test.toit'
Compilation failed.
